# db-scraper

./: .gitignore  app.py  pyproject.toml
src/db_scraper/: config.py  gdrive_uploader.py  paths.py  scraper.py  tools.py
tests/: test_scraper.py
tests/fixtures/: sample_content.json  sample_tracklist.html
