[project]
name = "db-scraper"
version = "0.1.0"
description = ""
authors = [
    {name = "Antonio Júnior",email = "juniorssz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "pandas (>=2.3.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "db_scraper", from = "src"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"
pytest = "^8.4.1"
pytest-mock = "^3.14.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
